# jira-service-desk-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_jira_service_desk/: __init__.py  __main__.py  client.py  config.py  formatting.py  server.py
tests/: conftest.py  test_client.py  test_config.py  test_formatting.py  test_onpremise.py  test_server.py
